# RepPlatform

./: CMakeLists.txt
include/: Exception.h  FileException.h  Guest.h  InputException.h  User.h  algorythm.h  cards.h  catalog.h  courses.h  guest.h  interface.h  stack.h  student.h  subcatalog.h  teacher.h  user.h
src/: main.cpp
src/classes/: Exception.cpp  Exception.h  FileException.cpp  FileException.h  Guest.cpp  Guest.h  InputException.cpp  InputException.h  User.cpp  User.h  algorythm.cpp  algorythm.h  cards.cpp  cards.h  catalog.cpp  catalog.h  courses.cpp  courses.h  interface.cpp  stack.inl  student.cpp  student.h  subcatalog.cpp  subcatalog.h  teacher.cpp  teacher.h
src/classes/catalog_module/: catalog.cpp  courses.cpp  subcatalog.cpp
src/classes/exception_module/: Exception.cpp  FileException.cpp  InputException.cpp
src/classes/user_module/: Guest.cpp  User.cpp  cards.cpp  guest.cpp  student.cpp  teacher.cpp  user.cpp
var/backup/: Cards  Teachers  Users
var/info/: Cards  Courses  Students  Teachers  Users
